--- a/BusinessCard/wwwroot/css/aboutMe.css
+++ b/BusinessCard/wwwroot/css/aboutMe.css
@@ -86,7 +86,7 @@
     flex-direction: column;
     align-items: center;
     background: white;
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 16px #ccc;
 }
 
 .socialNetwork {
@@ -157,7 +157,7 @@
     align-items: center;
     background: white;
     border-radius: 10px;
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 16px #ccc;
     transition: all 0.2s;
 }
 
@@ -222,7 +222,7 @@
     width: 100%;
     border-radius: 5px;
     background: white;
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 16px #ccc;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -298,7 +298,7 @@
     position: relative;
     border-radius: 5px;
     background: white;
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 16px #ccc;
 }
 
 .line {
