--- a/BusinessCard/wwwroot/css/work.css
+++ b/BusinessCard/wwwroot/css/work.css
@@ -32,7 +32,7 @@
 
 .box {
     border-radius: 5px;
-    box-shadow: 0px 30px 40px -20px hsl(229, 6%, 66%);
+    box-shadow: 0 4px 16px #ccc;
     padding: 30px;
     margin: 20px;
     border-top: 3px solid #87CEFA;
